BWI-1 | Bot funcionando correctamente

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "start": " yarn dev"
+    "dev": "ts-node src/index.ts"
   },
   "devDependencies": {
     "nodemon": "^2.0.13",
