--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "yarn dev",
-    "install": "npm install yarn",
+    "build": "babel src -d lib",
+    "test": "jest",
     "dev": "ts-node src/index.ts"
   },
   "devDependencies": {
